# pkdb-mcp

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pkdb_mcp/: __init__.py  __main__.py  client.py  errors.py  openapi.py  registry.py  server.py  settings.py  types.py
src/pkdb_mcp/specs/: pkdb_swagger_fallback.json
tests/: test_client.py  test_openapi.py  test_registry.py
tests/fixtures/: pkdb_minimal_openapi.json
